# desk-copilot

./: .gitignore  README.md  package.json
.github/workflows/: publish.yml  test-on-pr.yml
py/: .pre-commit-config.yaml  build.py  main.py  pyproject.toml
py/desk_copilot/: __init__.py  main.py
py/desk_copilot/agent/: __init__.py
py/desk_copilot/prompt/: system_prompt.py
py/desk_copilot/utils/: __init__.py  kv_store.py  st_js_inject.py
py/tests/: __init__.py
src/: index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
