[tool.poetry]
name = "desk-copilot"
version = "0.1.0"
description = ""
authors = ["tgscan.xyz@outlook.com"]
readme = "README.md"
packages = [{include = "desk_copilot"}]

[tool.poetry.dependencies]
python = "3.9.8"
toolz = "^0.12.0"
loguru = "^0.7.1"
langchain = "^0.0.285"
openai = "^0.28.0"
streamlit = "^1.26.0"
duckduckgo-search = "^3.8.5"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
